--- a/.github/workflows/javac-build.yml
+++ b/.github/workflows/javac-build.yml
@@ -2,8 +2,7 @@
 
 name: Javac Build Verification
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
+# Controls when the action will run. Triggers the workflow on pull request events
 on: pull_request
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -20,7 +19,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Verify that all Java code compiles
-      - uses: actions/setup-java@v1
+        uses: actions/setup-java@v1
         with:
           java-version: '9.0.4' # The JDK version to make available on the path.
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
