--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -1,9 +1,11 @@
+name: Google Style Guide Verification
+
 on: pull_request
 
 jobs:
   checkstyle_job:
     runs-on: ubuntu-latest
-    name: Checkstyle job
+    name: checkstyle
     steps:
     - name: Checkout
       uses: actions/checkout@v2
