--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -7,13 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     name: checkstyle
     steps:
-    - name: Checkout
+    - name: Checkout Repo Branch
       uses: actions/checkout@v2
-    - name: Run check style
+    - name: Run checkstyle
       uses: nikitasavinov/checkstyle-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         reporter: 'github-pr-review'
         checkstyle_config: 'google_checks.xml'
         fail_on_error: true
-        tool_name: 'checkstyles'
+        tool_name: 'checkstyle'
