--- a/.github/workflows/javac-build.yml
+++ b/.github/workflows/javac-build.yml
@@ -15,13 +15,17 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout Repo Branch
+        uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Verify that all Java code compiles
+      - name: Install openjdk-11.0.8 (x64)
         uses: actions/setup-java@v1
         with:
-          java-version: '9.0.4' # The JDK version to make available on the path.
+          java-version: '11.0.8' # The JDK version to make available on the path.
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
-      - run: javac -d bin -sourcepath source *.java
+      - name: Verify that all Java code compiles
+        run: javac -d bin -sourcepath source $(find -name *.java)
+        # Note this uses command substitution and the find command
+        # from CSI 3660 Systems Admin I
