--- a/.github/workflows/javac-build.yml
+++ b/.github/workflows/javac-build.yml
@@ -2,8 +2,7 @@
 
 name: Javac Build Verification
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
+# Controls when the action will run. Triggers the workflow on pull request events
 on: pull_request
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -16,13 +15,17 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout Repo Branch
+        uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Verify that all Java code compiles
-      - uses: actions/setup-java@v1
+      - name: Install openjdk-11.0.8 (x64)
+        uses: actions/setup-java@v1
         with:
-          java-version: '9.0.4' # The JDK version to make available on the path.
+          java-version: '11.0.8' # The JDK version to make available on the path.
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
-      - run: javac -d bin -sourcepath source *
+      - name: Verify that all Java code compiles
+        run: javac -d bin -sourcepath source $(find -name *.java)
+        # Note this uses command substitution and the find command
+        # from CSI 3660 Systems Admin I
