--- a/.github/workflows/javac-build.yml
+++ b/.github/workflows/javac-build.yml
@@ -25,6 +25,8 @@ jobs:
           java-version: '11.0.8' # The JDK version to make available on the path.
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
+      - name: Install Maven
+        run: sudo apt install maven; echo $(mvn --version)
       - name: Verify that all Java code compiles
         run: javac -d bin -sourcepath source $(find -name *.java)
         # Note this uses command substitution and the find command
