--- a/.github/workflows/javac-build.yml
+++ b/.github/workflows/javac-build.yml
@@ -25,9 +25,18 @@ jobs:
           java-version: '11.0.8' # The JDK version to make available on the path.
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
-      - name: Install Maven
-        run: sudo apt install maven; echo $(mvn --version)
+      - name: Install wget
+        run: sudo apt install wget
+      - name: Install junit-console-standalone-1.6.2
+        run:
+          wget https://search.maven.org/remotecontent?filepath=org/junit/platform/junit-platform-console-standalone/1.6.2/junit-platform-console-standalone-1.6.2.jar,
+          mv 'remotecontent?filepath=org%2Fjunit%2Fplatform%2Fjunit-platform-console-standalone%2F1.6.2%2Fjunit-platform-console-standalone-1.6.2.jar' junit-platform-console-standalone-1.6.2.jar,
+          unzip junit-platform-console-standalone-1.6.2.jar -d junit-platform-console-standalone-1.6.2
+        # Note, we get the JAR file from getting the link from the public Maven website, then extract it.
       - name: Verify that all Java code compiles
-        run: javac -d bin -sourcepath source $(find -name *.java)
+        run: 
+          ls,
+          echo,
+          javac -d bin -sourcepath source -classpath junit-platform-console-standalone-1.6.2.jar $(find -name *.java)
         # Note this uses command substitution and the find command
         # from CSI 3660 Systems Admin I
