--- a/.github/workflows/javac-build.yml
+++ b/.github/workflows/javac-build.yml
@@ -51,6 +51,6 @@ jobs:
           unzip junit-jupiter-params-5.6.2.jar -d junit-jupiter-params-5.6.2;
         # Note, we get the JARs file from getting the link from the public Maven website, then build the file structure.
       - name: Verify that all Java code compiles
-        run: javac -d bin -sourcepath source -classpath junit-5.6.2/console/junit-platform-console-standalone-1.6.2.jar $(find -name *.java)
+        run: javac -d bin -sourcepath source -classpath junit-5.6.2 $(find -name *.java)
         # Note this uses command substitution and the find command
         # from CSI 3660 Systems Admin I
