--- a/.github/workflows/javac-build.yml
+++ b/.github/workflows/javac-build.yml
@@ -32,6 +32,7 @@ jobs:
           mkdir junit-5.6.2;
           cd junit-5.6.2;
           mkdir console;
+          cd console;
           wget https://search.maven.org/remotecontent?filepath=org/junit/platform/junit-platform-console-standalone/1.6.2/junit-platform-console-standalone-1.6.2.jar;
           mv 'remotecontent?filepath=org%2Fjunit%2Fplatform%2Fjunit-platform-console-standalone%2F1.6.2%2Fjunit-platform-console-standalone-1.6.2.jar' junit-platform-console-standalone-1.6.2.jar;
           unzip junit-platform-console-standalone-1.6.2.jar -d junit-platform-console-standalone-1.6.2;
