--- a/.github/workflows/javac-build.yml
+++ b/.github/workflows/javac-build.yml
@@ -22,12 +22,36 @@ jobs:
       - name: Install openjdk-11.0.8 (x64)
         uses: actions/setup-java@v1
         with:
-          java-version: '11.0.8' # The JDK version to make available on the path.
+          java-version: 11.0.8 # The JDK version to make available on the path.
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
-      - name: Install Maven
-        run: sudo apt install maven; echo $(mvn --version)
+      - name: Install wget
+        run: sudo apt install wget
+      - name: Install JUnit
+        run:
+          mkdir junit-5.6.2;
+          cd junit-5.6.2;
+          mkdir console;
+          cd console;
+          wget https://search.maven.org/remotecontent?filepath=org/junit/platform/junit-platform-console-standalone/1.6.2/junit-platform-console-standalone-1.6.2.jar;
+          mv 'remotecontent?filepath=org%2Fjunit%2Fplatform%2Fjunit-platform-console-standalone%2F1.6.2%2Fjunit-platform-console-standalone-1.6.2.jar' junit-platform-console-standalone-1.6.2.jar;
+          unzip junit-platform-console-standalone-1.6.2.jar -d junit-platform-console-standalone-1.6.2;
+          mkdir ../jupiter;
+          cd ../jupiter;
+          wget https://search.maven.org/remotecontent?filepath=org/junit/jupiter/junit-jupiter/5.6.2/junit-jupiter-5.6.2.jar;
+          mv 'remotecontent?filepath=org%2Fjunit%2Fjupiter%2Fjunit-jupiter%2F5.6.2%2Fjunit-jupiter-5.6.2.jar' junit-jupiter-5.6.2.jar;
+          wget https://search.maven.org/remotecontent?filepath=org/junit/jupiter/junit-jupiter-api/5.6.2/junit-jupiter-api-5.6.2.jar;
+          mv 'remotecontent?filepath=org%2Fjunit%2Fjupiter%2Fjunit-jupiter-api%2F5.6.2%2Fjunit-jupiter-api-5.6.2.jar' junit-jupiter-api-5.6.2.jar;
+          wget https://search.maven.org/remotecontent?filepath=org/junit/jupiter/junit-jupiter-engine/5.6.2/junit-jupiter-engine-5.6.2.jar;
+          mv 'remotecontent?filepath=org%2Fjunit%2Fjupiter%2Fjunit-jupiter-engine%2F5.6.2%2Fjunit-jupiter-engine-5.6.2.jar' junit-jupiter-engine-5.6.2.jar;
+          wget https://search.maven.org/remotecontent?filepath=org/junit/jupiter/junit-jupiter-migrationsupport/5.6.2/junit-jupiter-migrationsupport-5.6.2.jar;
+          mv 'remotecontent?filepath=org%2Fjunit%2Fjupiter%2Fjunit-jupiter-migrationsupport%2F5.6.2%2Fjunit-jupiter-migrationsupport-5.6.2.jar' junit-jupiter-migrationsupport-5.6.2.jar;
+          wget https://search.maven.org/remotecontent?filepath=org/junit/jupiter/junit-jupiter-params/5.6.2/junit-jupiter-params-5.6.2.jar;
+          mv 'remotecontent?filepath=org%2Fjunit%2Fjupiter%2Fjunit-jupiter-params%2F5.6.2%2Fjunit-jupiter-params-5.6.2.jar' junit-jupiter-params-5.6.2.jar;
+          unzip junit-jupiter-api-5.6.2.jar -d junit-jupiter-api-5.6.2;
+          unzip junit-jupiter-params-5.6.2.jar -d junit-jupiter-params-5.6.2;
+        # Note, we get the JARs file from getting the link from the public Maven website, then build the file structure.
       - name: Verify that all Java code compiles
-        run: javac -d bin -sourcepath source $(find -name *.java)
+        run: javac -d bin -sourcepath source -classpath junit-5.6.2/console/junit-platform-console-standalone-1.6.2.jar $(find -name *.java)
         # Note this uses command substitution and the find command
         # from CSI 3660 Systems Admin I
