--- a/.github/workflows/javac-build.yml
+++ b/.github/workflows/javac-build.yml
@@ -1,14 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Javac Build Verification
+name: Javac Build and JUnit Test Verification
 
 # Controls when the action will run. Triggers the workflow on pull request events
 on: pull_request
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# This workflow contains a series of three jobs: setup, build, and test"
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  # First, all of the required software is intalled onto the Test on Demand (TOD) machine
+  setup:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -18,17 +18,18 @@ jobs:
       - name: Checkout Repo Branch
         uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
+      # Installs the Java JKD
       - name: Install openjdk-11.0.8 (x64)
         uses: actions/setup-java@v1
         with:
           java-version: 11.0.8 # The JDK version to make available on the path.
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
-      - name: Install wget
-        run: sudo apt install wget
+
+      # Installs JUnit
       - name: Install JUnit
         run:
+          sudo apt install wget;
           mkdir junit-5.6.2;
           cd junit-5.6.2;
           mkdir console;
@@ -51,7 +52,33 @@ jobs:
           unzip junit-jupiter-api-5.6.2.jar -d junit-jupiter-api-5.6.2;
           unzip junit-jupiter-params-5.6.2.jar -d junit-jupiter-params-5.6.2;
         # Note, we get the JARs file from getting the link from the public Maven website, then build the file structure.
+  
+  # Next, we verify that the Java project builds
+  build: 
+    # Wait to start the build script until setup is complete
+    needs: setup
+
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Verify that the Java code compiles correctly
       - name: Verify that all Java code compiles
         run: javac -d bin -sourcepath source -classpath junit-5.6.2/console/junit-platform-console-standalone-1.6.2.jar $(find -name *.java)
-        # Note this uses command substitution and the find command
-        # from CSI 3660 Systems Admin I
+        # Note this uses command substitution and the find command from CSI 3660 Systems Admin I to build all Java files
+  
+  # Finally, we run all of the unit tests
+  test:
+    # Wait to start the test script until build is complete
+    needs: build
+
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Verify that the Java code compiles correctly
+      - name: Verify that all JUnit tests pass
+        run: java -classpath bin:junit-5.6.2/console/junit-platform-console-standalone-1.6.2.jar:junit-5.6.2/console/junit-platform-console-standalone-1.6.2.jar org.junit.platform.console.ConsoleLauncher --scan-classpath
+        # Note this uses command substitution and the find command from CSI 3660 Systems Admin I to build all Java files
