--- a/.github/workflows/javac-build.yml
+++ b/.github/workflows/javac-build.yml
@@ -114,3 +114,10 @@ jobs:
       # Run the JUnit tests
       - name: Verify that all JUnit tests pass
         run: java -classpath bin:junit-5.6.2/console/junit-platform-console-standalone-1.6.2.jar:junit-5.6.2/console/junit-platform-console-standalone-1.6.2.jar org.junit.platform.console.ConsoleLauncher --scan-classpath
+
+      # Publish JUnit test report
+      - name: Publish JUnit Test Report
+        uses: mikepenz/action-junit-report@v1
+        with:
+          report_paths: '**/build/test-results/test/TEST-*.xml'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
