--- a/.github/workflows/javac-build.yml
+++ b/.github/workflows/javac-build.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Javac Build Verification
+name: Javac Build and JUnit Test Verification
 
 # Controls when the action will run. Triggers the workflow on pull request events
 on: pull_request
