--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+source/edu/oakand/helper/.DS_Store
+source/edu/.DS_Store
+source/.DS_Store
+source/edu/oakand/helper/database/.DS_Store
+source/edu/oakand/.DS_Store
+.DS_Store
