--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# .DS_store files created by Finder on Mac
+*.DS_Store
