--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -1,6 +1,6 @@
 name: Google Style Guide Verification
 
-on: [pull_request, workflow_dispatch]
+on: [push, workflow_dispatch]
 
 jobs:
   checkstyle_job:
