--- a/.github/workflows/javac-build.yml
+++ b/.github/workflows/javac-build.yml
@@ -3,7 +3,7 @@
 name: Javac Build and JUnit Test Verification
 
 # Controls when the action will run. Triggers the workflow on pull request events
-on: pull_request
+on: [pull_request, workflow_dispatch]
 
 # This workflow contains a two jobs: "build" and "test"
 jobs:
