--- a/.github/workflows/generate-plantuml-diagrams.yml
+++ b/.github/workflows/generate-plantuml-diagrams.yml
@@ -45,3 +45,19 @@ jobs:
         with:
           workflow: Google Style Guide Verification
           token: ${{ secrets.PERSONAL_TOKEN }}
+      - name: Report Checkstyles Success to Pull Request
+        if: ${{ success() }}
+        uses: Sibz/github-status-action@v1
+        with: 
+          authToken: ${{secrets.GITHUB_TOKEN}}
+          context: checkstyle
+          state: 'success'
+          sha: ${{github.event.pull_request.head.sha || github.sha}}
+      - name: Report Checkstyles Failure to Pull Request
+        if: ${{ failure() }}
+        uses: Sibz/github-status-action@v1
+        with: 
+          authToken: ${{secrets.GITHUB_TOKEN}}
+          context: checkstyle
+          state: 'failed'
+          sha: ${{github.event.pull_request.head.sha || github.sha}}
