--- a/.github/workflows/generate-plantuml-diagrams.yml
+++ b/.github/workflows/generate-plantuml-diagrams.yml
@@ -54,8 +54,8 @@ jobs:
           authToken: ${{secrets.GITHUB_TOKEN}}
           context: checkstyle
           state: 'success'
-          sha: ${{git rev-parse HEAD}}
-          # target_url: https://github.com/andrewdimmer/csi-3370-software-project-config-test/runs/${{GITHUB_RUN_ID}}
+          sha: ${{github.sha}}
+          target_url: https://github.com/andrewdimmer/csi-3370-software-project-config-test/runs/${{GITHUB_RUN_ID}}
       - name: Report Checkstyles Failure to Pull Request
         if: ${{ failure() }}
         uses: Sibz/github-status-action@v1
@@ -63,5 +63,5 @@ jobs:
           authToken: ${{secrets.GITHUB_TOKEN}}
           context: checkstyle
           state: 'failed'
-          sha: ${{git rev-parse HEAD}}
-          # target_url: https://github.com/andrewdimmer/csi-3370-software-project-config-test/runs/${{GITHUB_RUN_ID}}
+          sha: ${{github.sha}}
+          target_url: https://github.com/andrewdimmer/csi-3370-software-project-config-test/runs/${{GITHUB_RUN_ID}}
