--- a/.github/workflows/generate-plantuml-diagrams.yml
+++ b/.github/workflows/generate-plantuml-diagrams.yml
@@ -40,6 +40,7 @@ jobs:
     steps:
       - name: Checkout Source 
         uses: actions/checkout@v2
+      - run: echo ::set-env name=NEW_SHA::$(git rev-parse HEAD)
       - name: Restart Google Style Guide Verification
         uses: nikitasavinov/checkstyle-action@master
         with:
@@ -54,8 +55,8 @@ jobs:
           authToken: ${{secrets.GITHUB_TOKEN}}
           context: checkstyle
           state: 'success'
-          sha: ${{github.sha}}
-          target_url: https://github.com/andrewdimmer/csi-3370-software-project-config-test/runs/${{GITHUB_RUN_ID}}
+          sha: ${{env.NEW_SHA}}
+          target_url: https://github.com/andrewdimmer/csi-3370-software-project-config-test/runs/${{env.GITHUB_RUN_ID}}
       - name: Report Checkstyles Failure to Pull Request
         if: ${{ failure() }}
         uses: Sibz/github-status-action@v1
@@ -63,5 +64,5 @@ jobs:
           authToken: ${{secrets.GITHUB_TOKEN}}
           context: checkstyle
           state: 'failed'
-          sha: ${{github.sha}}
-          target_url: https://github.com/andrewdimmer/csi-3370-software-project-config-test/runs/${{GITHUB_RUN_ID}}
+          sha: ${{env.NEW_SHA}}
+          target_url: https://github.com/andrewdimmer/csi-3370-software-project-config-test/runs/${{env.GITHUB_RUN_ID}}
