--- a/.github/workflows/generate-plantuml-diagrams.yml
+++ b/.github/workflows/generate-plantuml-diagrams.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Checkout Source 
         uses: actions/checkout@v2
       - name: Save the Newest Commit's Hash
-        run: echo NEW_SHA=$(git rev-parse HEAD) >> $GITHUB_ENV
+        run: echo Job Run Id ${{env.GITHUB_RUN_ID}} ; echo New SHA $(git rev-parse HEAD); echo NEW_SHA=$(git rev-parse HEAD) >> $GITHUB_ENV
       - name: Restart Google Style Guide Verification
         uses: nikitasavinov/checkstyle-action@master
         with:
