--- a/.github/workflows/generate-plantuml-diagrams.yml
+++ b/.github/workflows/generate-plantuml-diagrams.yml
@@ -40,12 +40,13 @@ jobs:
     steps:
       - name: Checkout Source 
         uses: actions/checkout@v2
-        with:
-          ref: ${{github.event.pull_request.head.ref}}
       - name: Pull Changes and Save the Newest Commit's Hash
         run:
-          echo JOB_RUN_ID=$(curl https://api.github.com/repos/andrewdimmer/csi-3370-software-project-config-test/commits/${{github.events.pull_request.head.sha}}/check-runs \
-          | python3 .github/github_action_workflow_to_job_id.py "post-plantuml-checkstyle") >> $GITHUB_ENV
+          jobRunId=$(curl https://api.github.com/repos/andrewdimmer/csi-3370-software-project-config-test/commits/$(git rev-parse HEAD)/check-runs \
+          | python3 .github/github_action_workflow_to_job_id.py "post-plantuml-checkstyle")
+          echo Job Run Id $jobRunId
+          echo JOB_RUN_ID=$jobRunId >> $GITHUB_ENV
+          git fetch ${{github.event.pull_request.head.ref}}
           echo New SHA $(git rev-parse HEAD)
           echo NEW_SHA=$(git rev-parse HEAD) >> $GITHUB_ENV
       - name: Restart Google Style Guide Verification
