--- a/.github/workflows/generate-plantuml-diagrams.yml
+++ b/.github/workflows/generate-plantuml-diagrams.yml
@@ -29,48 +29,34 @@ jobs:
         with:
             args: -v -tpng ${{ steps.getfile.outputs.files }}
       - name: Stage Local Changes to Commit
-        run: git status; git add *; git status
+        run:
+          echo COMMIT=$(git status | grep "nothing to commit, working tree clean")
+          echo COMMIT=$(git status | grep "nothing to commit, working tree clean") >> $GITHUB_ENV
+          git status;
+          git add *;
+          git status;
       - name: Commit PlantUML Diagrams
+        if: ${{ env.COMMIT }}
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Generate SVG and PNG Images for PlantUML Diagrams
-  post-plantuml-checkstyle:
-    runs-on: ubuntu-latest
-    needs: generate
-    steps:
-      - name: Checkout Source 
-        uses: actions/checkout@v2
-      - name: Pull Changes and Save the Newest Commit's Hash
+      - name: Get the checkstyle Results to Propagate
         run:
-          echo ${{github}};
-          curl https://api.github.com/repos/andrewdimmer/csi-3370-software-project-config-test/commits/$(git rev-parse HEAD)/check-runs | python3 .github/github_action_workflow_to_job_id.py "post-plantuml-checkstyle" > jobrunid.txt;
-          echo Job Run Id $(cat jobrunid.txt);
-          echo JOB_RUN_ID=$(cat jobrunid.txt) >> $GITHUB_ENV;
-          git pull origin ${{github.ref}}
+          curl https://api.github.com/repos/andrewdimmer/csi-3370-software-project-config-test/commits/$(git rev-parse HEAD~1)/check-runs > check_runs.json
+          cat check_runs.json | python3 .github/github_action_workflow_to_job_id.py "checkstyle" "id" > checkstyle_job_run_id.txt;
+          echo checkstyle Job Run Id $(cat checkstyle_job_run_id.txt);
+          echo CHECKSTYLE_JOB_RUN_ID=$(cat checkstyle_job_run_id.txt) >> $GITHUB_ENV;
+          cat check_runs.json | python3 .github/github_action_workflow_to_job_id.py "checkstyle" "conclusion" > checkstyle_job_run_conclusion.txt;
+          echo checkstyle Conclusion $(cat checkstyle_job_run_conclusion.txt);
+          echo CHECKSTYLE_CONCLUSION=$(cat checkstyle_job_run_conclusion.txt) >> $GITHUB_ENV;
           echo New SHA $(git rev-parse HEAD);
           echo NEW_SHA=$(git rev-parse HEAD) >> $GITHUB_ENV;
-      - name: Restart Google Style Guide Verification
-        uses: nikitasavinov/checkstyle-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          checkstyle_config: 'google_checks.xml'
-          fail_on_error: true
-          tool_name: 'checkstyle'
-      - name: Report Checkstyles Success to Pull Request
-        if: ${{ success() }}
+      - name: Propagate checkstyle Status to the New Commit
+        if: ${{ env.COMMIT }}
         uses: Sibz/github-status-action@v1
         with: 
           authToken: ${{secrets.GITHUB_TOKEN}}
           context: checkstyle
-          state: 'success'
+          state: ${{env.CHECKSTYLE_CONCLUSION}}
           sha: ${{env.NEW_SHA}}
-          target_url: https://github.com/andrewdimmer/csi-3370-software-project-config-test/runs/${{env.JOB_RUN_ID}}
-      - name: Report Checkstyles Failure to Pull Request
-        if: ${{ failure() }}
-        uses: Sibz/github-status-action@v1
-        with: 
-          authToken: ${{secrets.GITHUB_TOKEN}}
-          context: checkstyle
-          state: 'failure'
-          sha: ${{env.NEW_SHA}}
-          target_url: https://github.com/andrewdimmer/csi-3370-software-project-config-test/runs/${{env.JOB_RUN_ID}}
+          target_url: https://github.com/andrewdimmer/csi-3370-software-project-config-test/runs/${{env.CHECKSTYLE_JOB_RUN_ID}}
