--- a/.github/workflows/generate-plantuml-diagrams.yml
+++ b/.github/workflows/generate-plantuml-diagrams.yml
@@ -36,11 +36,12 @@ jobs:
           git add *;
           git status;
       - name: Commit PlantUML Diagrams
-        if: ${{ env.COMMIT }}
+        if: ${{ !env.COMMIT }}
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Generate SVG and PNG Images for PlantUML Diagrams
       - name: Get the checkstyle Results to Propagate
+        if: ${{ !env.COMMIT }}
         run:
           curl https://api.github.com/repos/andrewdimmer/csi-3370-software-project-config-test/commits/$(git rev-parse HEAD~1)/check-runs > check_runs.json;
           cat check_runs.json | python3 .github/github_action_workflow_to_job_id.py "checkstyle" "id" > checkstyle_job_run_id.txt;
@@ -52,7 +53,7 @@ jobs:
           echo New SHA $(git rev-parse HEAD);
           echo NEW_SHA=$(git rev-parse HEAD) >> $GITHUB_ENV;
       - name: Propagate checkstyle Status to the New Commit
-        if: ${{ env.COMMIT }}
+        if: ${{ !env.COMMIT }}
         uses: Sibz/github-status-action@v1
         with: 
           authToken: ${{secrets.GITHUB_TOKEN}}
